--- a/index.css
+++ b/index.css
@@ -5,21 +5,16 @@ body {
 }
 
 /************************* HOME NAVBAR *************************/
+
 nav {
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
-    padding: 10px 100px;
-    box-sizing: border-box;
-    transition: .5s;
-}
-
-nav.black {
-    background: rgba(0,0,0,1);
     height: 80px;
     padding: 10px 50px;
+    box-sizing: border-box;
+    background: #363636;
+    transition: .5s;
 }
 
 nav .logo  {
@@ -27,12 +22,6 @@ nav .logo  {
 }
 
 nav .logo img {
-    height: 60px;
-    width: 300px;
-    transition: .5s;
-}
-
-nav.black .logo img {
     height: 50px;
     width: 250px;
 }
@@ -50,17 +39,12 @@ nav ul li {
 }
 
 nav ul li a {
-    line-height: 80px;
+    line-height: 60px;
     color: #fff;
-    padding: 5px 17px;
+    padding: 5px 12px;
     text-decoration: none;
     text-transform: uppercase;
     transition: .5s;
-}
-
-nav.black ul li a {
-    color: #fff;
-    line-height: 60px;
 }
 
 nav ul li a.active,
@@ -75,7 +59,7 @@ nav ul li a:hover {
 }
 
 section.middle {
-    padding: 40px;
+    padding: 10px;
 }
 
 section.middle h1 {
@@ -85,10 +69,27 @@ section.middle h1 {
     text-align: center;
 }
 
+section.middle img {
+    padding: 1rem;
+}
+
+section.middle .wrap {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 3% 0;    
+}
+
+section.middle .wrap-text {
+    justify-content: center;
+}
+
 section.middle p {
     margin: 20px 0 0;
     padding: 0;
     font-size: 1em;
+    text-align: center;
 }
 
 /************************* FOOTER *************************/
@@ -101,14 +102,28 @@ section.footer {
 }
 
 section.footer h1 {
-    font-size: 27px;
+    font-size: 22px;
     margin-top: 5px;
     margin-bottom: 10px;
-    font-weight: bold;
+    text-decoration: underline;
 }
 
 section.footer p {
     margin: 0;
+}
+
+section.footer button {
+    margin-top: 5px;
+}
+
+.fa {
+    background: #fff;
+}
+
+section.footer .bottom-footer h3{
+    font-size: 14px;
+    color: grey;
+    margin: 20px 0;
 }
 
 @media screen and (max-width: 1050px) {
@@ -116,9 +131,8 @@ section.footer p {
     .responsive-bar {
         display: block;
         width: 100%;
-        height: 65px;
-        background: #000;
-        position: fixed;
+        height: 2px;
+        background: #363636;
         top: 0;
         left: 0;
         padding: 5px 20px;
@@ -128,7 +142,7 @@ section.footer p {
 
     .responsive-bar .logo img {
         float: left;
-        height: 40px;
+        height: 45px;
         padding-top: 3px;
     }
 
@@ -142,8 +156,8 @@ section.footer p {
         cursor: pointer;
     }
 
-    nav, nav.black {
-        background: #000;
+    nav {
+        background: #363636;
         height: 60px;
         padding: 0;
     }
@@ -157,7 +171,7 @@ section.footer p {
         width: 100%;
         top: 60px;
         left: 0;
-        background: #000 ;
+        background: #363636;
         float: none;
         display: none;
     }
@@ -188,7 +202,7 @@ section.footer p {
 section.top {
     width: 100%; 
     height: 100vh;
-    background: url(Images/load.jpeg);
+    background: url(Images/teacher.jpeg);
     background-size: cover;
     background-position: center;
 }
@@ -206,6 +220,7 @@ section.top {
     -o-filter: blur(3px);
     -ms-filter: blur(3px);
     filter: blur(3px);
+    z-index: -1;
 }
 
 .userbox {
@@ -303,6 +318,10 @@ section.contact-top {
 section.contact-content h2 {
     text-align: center;
     padding: 10px;
+}
+
+section.contact-content {
+    height: 500px;
 }
 
 #contact-left {
