--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
     font-family: Times New Roman, sans-serif;
 }
 
-/************************* HOME NAVBAR *************************/
+/************************* NAVBAR *************************/
 .navbar {
     top: 0;
     left: 0;
@@ -165,6 +165,229 @@ section.footer .bottom-footer h3{
     color: grey;
     margin: 20px 0;
 }
+
+
+
+/************************* VIDEOS *************************/
+
+
+
+
+
+
+
+/************************* END OF VIDEOS *************************/
+
+
+
+
+/************************* CONTACT *************************/
+
+section.contact-content h2 {
+    text-align: center;
+    padding: 10px;
+}
+
+section.contact-content {
+    height: 500px;
+}
+
+#contact-left {
+    display: inline-block;
+    padding: 0;
+    margin-right: -5px;
+    vertical-align: top;
+    padding-left: 8%;
+    padding-right: 4%;
+    color: #888888;
+    border: none;
+}
+
+#contact-right {
+    display: inline-block;
+    padding: 0;
+    vertical-align: top;
+    border: none;
+}
+
+#contact-right form {
+    display: block;
+    margin-top: 0em;  
+}
+
+#contact-right form .form-header {
+    font-size: 18px;
+}
+
+#contact-right form .input-body {
+    margin-bottom: 3%;
+    width: 600px;
+    height: 60px;
+    font-size: 16px;
+    padding-left: 2%;
+    border: 2px solid #262626;
+    border-radius: 8px;
+}
+
+#contact-right form textarea {
+    height: 100px !important;
+}
+
+#contact-right form h4 {
+    font-size: 16px;
+}
+
+#contact-send {
+    width: 600px;
+    height: 60px;
+    background: #29bea2;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.card {
+    position: relative;
+    flex-direction: column;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: 1.25rem;
+}
+
+.star {
+    color: #29bea2;
+}
+
+/************************* END OF CONTACT *************************/
+
+
+
+
+
+/************************* LOGIN/SIGNUP *************************/
+#formscreen {
+    background: #d3d3d3;
+}
+
+.container-form {
+    max-width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+    margin-bottom: 10%;
+    margin-top: 2%;
+}
+
+.header {
+    text-align: center;
+    color: #fff;
+    font-size: 17px;
+    text-transform: uppercase;
+    background: #005b96;
+}
+
+.wrapper >* {
+    padding: 1.3rem;
+}
+
+.wrapper {
+    box-shadow: 0 0 20px rgba(72,94,116,0.7);
+}
+
+.contact {
+    background: #fff;
+}
+
+.contact form {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 22px;
+}
+
+.contact form label {
+    display: block;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.contact form p {
+    margin: 0;
+}
+
+.contact form input {
+    background: #e7eeef;
+    border-radius: 6px;
+    border: none;
+    font-size: 15px;
+    opacity: .4;
+}
+
+.contact form input:focus {
+    background: #eee;
+    transition: 1s;
+    outline-color: #29bea2;
+    opacity: 1;
+}
+
+.contact form .privacy {
+    text-align: center;
+    font-size: 13px;
+}
+
+.contact form .full {
+    text-align: center;
+}
+
+.contact form .full a {
+    font-size: 13px;
+    color: #000080;
+}
+
+.contact form .privacy a {
+    color: #000;
+    font-weight: bold;
+}
+
+.contact form input {
+    width: 100%;
+    padding: .5em;
+}
+
+.contact form button {
+    width: 100%;
+    height: 35px;
+    font-size: 15px;
+    background: #005b96;
+    color: #fff;
+    border: 0;
+    text-transform: uppercase;
+}
+
+#signin-footer {
+    background: #005b96;
+    color: #fff;
+    text-align: center;
+}
+
+#signin-footer a {
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+/************************* END OF LOGIN/SIGNUP *************************/
+
+
+
 
 /************************* MEDIA QUERIES *************************/
 /*
