--- a/index.css
+++ b/index.css
@@ -23,7 +23,6 @@ body {
     padding: 0;
     font-size: 14px;
     text-align: center;
-    float: right;
 }
 
 .navbar ul li {
@@ -44,6 +43,7 @@ body {
     color: #fff;
     text-decoration: none;
 }
+
 
 /************************* LOADING-TOP *************************/
 
@@ -169,7 +169,13 @@ section.footer .bottom-footer h3{
 
 
 /************************* VIDEOS *************************/
-
+#video-header {
+    font-size: 20px;
+    text-align: left;
+    color: navy;
+    margin-top: 5%;
+    padding-left: 2%;
+}
 
 
 
@@ -310,7 +316,7 @@ section.contact-content {
 .contact form {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 22px;
+    grid-gap: 15px;
 }
 
 .contact form label {
@@ -324,17 +330,17 @@ section.contact-content {
 }
 
 .contact form input {
-    background: #e7eeef;
+    background: #d3d3d3;
     border-radius: 6px;
     border: none;
     font-size: 15px;
-    opacity: .4;
+    opacity: .5;
 }
 
 .contact form input:focus {
     background: #eee;
     transition: 1s;
-    outline-color: #29bea2;
+    outline-color: #71eeb8;
     opacity: 1;
 }
 
@@ -385,6 +391,91 @@ section.contact-content {
 }
 
 /************************* END OF LOGIN/SIGNUP *************************/
+
+
+
+
+/************************* CHECKOUT *************************/
+.grid {
+    display: grid;
+    grid-template-columns: 50% 49%;
+    grid-column-gap: 1em;
+    border: 2px solid black;
+    width: 100%;
+}
+
+.grid > div {
+    background: #eee;
+    padding: .5em;
+}
+
+.billing-info form{
+    display: grid;
+    padding: 1em;
+    grid-gap: 1em;
+}
+
+.billing-info form input {
+    font-size: 12px;
+    padding: 8px;
+    width: 100%;
+}
+
+.billing-info button {
+    background: #cb2027;
+    color: #fff;
+}
+
+.grid img {
+    height: 50px;
+    width: 80px;
+}
+
+/************************* END OF CHECKOUT *************************/
+
+#account {
+    background: #d3d3d3    ;
+}
+
+
+.account-profile {
+    background: black;
+    color: #fff;
+}
+
+
+
+
+
+
+/************************* ACCOUNT PAGE *************************/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/************************* END OF ACCOUNT PAGE *************************/
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
