--- a/index.css
+++ b/index.css
@@ -434,16 +434,16 @@ section.contact-content {
 /************************* END OF CHECKOUT *************************/
 
 #account {
-    background: #d3d3d3    ;
 }
 
 
 .account-profile {
-    background: black;
-    color: #fff;
+    color: #000;
 }
 
-
+.change-info {
+    border: 2px solid black;
+}
 
 
 
