--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-overflow-y: scroll;
+    overflow-y: scroll;
 }
 
 body {
@@ -174,17 +174,69 @@ section.footer .bottom-footer h3{
 
 
 /************************* VIDEOS *************************/
-#video-header {
-    font-size: 20px;
-    text-align: left;
-    color: navy;
-    margin-top: 5%;
-    padding-left: 2%;
+.video-container {
+    display: grid;
+    grid-template-columns: 1.2fr 4fr;
+    grid-template-rows: 70px 500px 80px;
+    color: white;
+    text-align: center;
+    padding: 1em;
+    margin-bottom: 120px;
 }
 
+.video-header {
+    color: #000;
+    font-size: 22px;
+    grid-column: 1 / -1;
+}
 
+.video-header i {
+    color: blue;
+}
 
+#sidebar {
+    
+}
 
+#sidebar ul li {
+    color: #000;
+    list-style: none;
+    padding: 10px 10px;
+    float: left;
+}
+
+#sidebar ul li::after {
+/*
+    content: "\f0cd";
+    display: block;
+*/
+}
+
+.video-menu {
+    background: rgba(230, 230, 230, 0.9);
+    color: #fff;
+    padding-top: 3em;
+/*    z-index: -1;*/
+    overflow-y: auto;
+    
+}
+
+.video {
+    position: relative;
+}
+
+.video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.video-footer {
+    grid-column: 1 / -1;
+    background: orange;
+}
 
 
 /************************* END OF VIDEOS *************************/
@@ -285,9 +337,11 @@ section.contact-content {
 
 
 /************************* LOGIN/SIGNUP *************************/
+/*
 #formscreen {
-    background: #d3d3d3;
+background: #d3d3d3;
 }
+*/
 
 .container-form {
     max-width: 550px;
@@ -310,11 +364,11 @@ section.contact-content {
 
 .wrapper >* {
     padding: 1.3rem;
-    
+
 }
 
 .wrapper {
-     border-radius:15px;
+    border-radius:15px;
     border: 1px black solid;
     box-shadow: 0 0 20px rgba(72,94,116,0.7);
 }
@@ -413,17 +467,34 @@ section.contact-content {
 
 
 /************************* CHECKOUT *************************/
+
 .grid {
     display: grid;
     grid-template-columns: 50% 49%;
     grid-column-gap: 1em;
-    border: 2px solid black;
     width: 100%;
+    padding: 2em;
 }
 
 .grid > div {
-    background: #eee;
     padding: .5em;
+}
+
+
+.bundle-info .cart{
+    padding: .7em;
+}
+
+.bundle-info items {
+    padding-left: 15px;
+}
+
+.bundle-info .cart h5 {
+    font-size: 18px;
+}
+
+#totoal-cost {
+    float: right;
 }
 
 .billing-info form{
@@ -441,6 +512,8 @@ section.contact-content {
 .billing-info button {
     background: #cb2027;
     color: #fff;
+    margin-left: 16px;
+    width: 120px;
 }
 
 .grid img {
@@ -450,35 +523,45 @@ section.contact-content {
 
 /************************* END OF CHECKOUT *************************/
 
-.heading {
-    font-size: 25px;
-}
-
-
-.account-profile {
-    color: #000;
-}
-
-.account-profile input {
-    width: 240px;
-}
-
-
 
 
 /************************* ACCOUNT PAGE *************************/
 
+.heading {
+    padding-left: 3%;
+    font-size: 25px;
+    color: #0D4F8B;
+}
 
+.account-profile {
+    color: #000;
+    padding: 3em;
+}
 
+.account-profile input {
+    width: 360px;
+    padding-left: 4px;
+}
 
+.change-info {
+    padding: 2em;
+}
 
+.change-info label {
+    font-size: 18px;
+    padding-left: 1.3em;
+}
 
+.change-info button {
+    width: 135px;
+    background: #0D4F8B;
+    color: #fff;
+}
 
-
-
-
-
-
+#save-edits {
+    width: 150px !important;
+    height: 50px;
+}
 
 
 /************************* END OF ACCOUNT PAGE *************************/
