--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: Times New Roman, sans-serif;
+    font-family: "Helvetica", sans-serif;
 /*    overflow-y: scroll;*/
 }
 
@@ -22,6 +22,7 @@ body {
     width: 100%;
     padding: 10px 50px;
     background: #404040;
+    max-height:80px !important;
 }
 
 .navbar img {
@@ -286,11 +287,7 @@ section.contact-content h2 {
 }
 
 section.contact-content {
-<<<<<<< HEAD
-/*    height: 600px;*/
-=======
     height: auto;
->>>>>>> remotes/origin/MH/2.06Branch
 }
 
 #contact-left {
@@ -400,7 +397,7 @@ section.contact-content {
 }
 
 .wrapper {
-    border-radius:15px;
+    border-radius:16px;
     border: 1px black solid;
     box-shadow: 0 0 20px rgba(72,94,116,0.7);
 }
@@ -493,6 +490,11 @@ section.contact-content {
     color:red;
 }
 
+.success{
+    font-weight:bold;
+    color:green;
+}
+
 /************************* END OF LOGIN/SIGNUP *************************/
 
 
@@ -571,7 +573,7 @@ section.contact-content {
 }
 
 .account-profile input {
-    width: 360px;
+    width: 300px;
     padding-left: 4px;
 }
 
