Lots of stuff changed

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: Times New Roman, sans-serif;
+    font-family: "Helvetica", sans-serif;
 }
 
 /************************* NAVBAR *************************/
@@ -14,7 +14,7 @@ body {
     left: 0;
     width: 100%;
     padding: 10px 50px;
-    background: #404040;
+    background: #2E4057;
 }
 
 .navbar img {
@@ -44,8 +44,8 @@ body {
 }
 
 .nav-link:hover {
-    background: #29bea2;
-    color: #fff !important;
+    background: #99C24D;
+    color: #000!important;
     text-decoration: none;
 }
 
@@ -122,7 +122,7 @@ section.middle-second h1 {
 section.footer {
     padding: 25px 0;
     position: relative;
-    background: #fff;
+    background: #2E4057;
     color: #000;
     border-top: 3px solid #29bea2;
 }
@@ -185,7 +185,7 @@ section.footer .bottom-footer h3{
 .video-container {
     display: grid;
     grid-template-columns: 1.2fr 4fr;
-    grid-template-rows: 70px 500px 80px;
+    grid-template-rows: 50px 500px 80px;
     color: white;
     text-align: center;
     padding: 1em;
@@ -199,31 +199,7 @@ section.footer .bottom-footer h3{
 }
 
 .video-header i {
-    color: blue;
-}
-
-#sidebar ul li:hover{
-    background: blue;
-    cursor: pointer;
-    color: #fff;
-}
-
-#sidebar ul li {
-    color: #000;
-    list-style: none;
-    padding: 15px 10px;
-    border-bottom: 1px solid #000;
-    float: left;
-}
-
-.previous {
-    padding-left: 5%;
-    margin-top: 13px;
-}
-
-.next {
-    padding-right: 5%;
-    margin-top: 13px;
+    color: #048BA8;
 }
 
 #sidebar h3 {
@@ -232,16 +208,56 @@ section.footer .bottom-footer h3{
     background: #fff;
 }
 
-#sidebar ul li::after {
-    /*
-    content: "\f0cd";
-    display: block;
-    */
+#sidebar ul li {
+    color: #FFF;
+    list-style: none;
+    padding: 15px 10px;
+    border-bottom: 1px solid #000;
+    width: 100%;
+    text-align: left;
+}
+
+#sidebar nav h3 {
+    color: #2F2D2E !important;
+}
+
+#sidebar nav h3::before {
+    content="";
+    padding-top: 2px;
+}
+
+#sidebar ul li:nth-child(n+2):nth-child(-n+6):hover {
+    background: rgba(230,230,230,.3);
+}
+
+#sidebar ul li:hover{
+    cursor: pointer;
+    color: #fff;
+}
+
+.lecture-icon {
+    font-size: 16px;
+}
+
+.fa fa-youtube-play::before {
+    content: "\f16a";
+}
+
+.previous {
+    font-size: 18px;
+    padding-left: 5%;
+    margin: 6px;
+}
+
+.next {
+    font-size: 18px;
+    padding-right: .5%;
+    margin-top: 6px;
 }
 
 .video-menu {
-    background: rgba(230, 230, 230, 0.9);;
-    color: red;
+    background: #2E4057;
+    border-left: 1px solid #C0C0C0;
     padding-top: 2em;
     overflow-y: auto;    
 }
@@ -260,7 +276,7 @@ section.footer .bottom-footer h3{
 
 .video-footer {
     grid-column: 1 / -1;
-    background: rgba(230, 230, 130, 0.9);;
+    background: #048BA8;
 }
 
 
@@ -585,6 +601,37 @@ section.contact-content {
 
 /************************* END OF ACCOUNT PAGE *************************/
 
+
+
+
+/************************* MODAL ACCOUONT FORMS FOR VIDEOS *************************/
+#unavailable-message h5 {
+    margin: 0 auto;
+    font-size: 20px;
+}
+
+#video-login p {
+    font-size: 14px;
+}
+
+#video-login button {
+    margin: 0 auto;
+    font-size: 13px;
+    opacity: 0.8;
+    margin-bottom: 16px;
+}
+
+#video-login button:hover {
+    transition: .7s;
+    opacity: 1;
+    cursor: pointer;
+}
+
+
+
+
+
+/************************* END OF MODAL ACCOUONT FORMS FOR VIDEOS *************************/
 
 
 
