update video page

--- a/index.css
+++ b/index.css
@@ -205,30 +205,31 @@ section.footer .bottom-footer h3{
     color: #048BA8;
 }
 
-#sidebar h3 {
-    font-size: 23px;
-    color: #29bea2;
-    background: #fff;
-}
 
 #sidebar ul li {
     color: #FFF;
     list-style: none;
-    padding: 15px 10px;
+    padding: 15px 20px;
     border-bottom: 1px solid #000;
     width: 100%;
     text-align: left;
+    font-size: 15px;
+}
+
+#sidebar .fas {
+    font-size: 20px;
+    color: #fff;
+    padding-right: 6px;
 }
 
 #sidebar nav h3 {
-    color: #2F2D2E !important;
+    background: #fff;
+    font-size: 18px;
+    color: #2F2D2E;
+    padding: 4px;
 }
 
-#sidebar nav h3::before {
-    content="";
-    padding-top: 2px;
-}
-
+/* Select children in range of 2 - 6 inclusive */
 #sidebar ul li:nth-child(n+2):nth-child(-n+6):hover {
     background: rgba(230,230,230,.3);
 }
@@ -240,10 +241,6 @@ section.footer .bottom-footer h3{
 
 .lecture-icon {
     font-size: 16px;
-}
-
-.fa fa-youtube-play::before {
-    content: "\f16a";
 }
 
 .previous {
