--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ body {
 .navbar {
     top: 0;
     left: 0;
+    height: 10vh;
     width: 100%;
     padding: 10px 50px;
     background: #2F2D2E;
@@ -61,7 +62,7 @@ section.top {
     background-position: center;
 }
 
-/*----------------------------------------------*/
+/************************* HOME PAGE SECTION A *************************/
 section.middle-a {
     padding: 2.5rem;
     border-top: 7px solid #FDB833;
@@ -104,7 +105,7 @@ section.middle-a p {
     text-align: center;
 }
 
-/*----------------------------------------------*/
+/************************* HOME PAGE SECTION B *************************/
 
 section.middle-b {
     padding: 2.5rem;
@@ -122,7 +123,7 @@ section.middle-b h1 {
     color: #2E4057;
 }
 
-/*----------------------------------------------*/
+/************************* HOME PAGE SECTION C *************************/
 section.middle-c {
     border-top: 2px solid #004385;
 }
@@ -132,8 +133,7 @@ section.middle-c {
     color: #ffffff;
 }
 
-/* --------------------------------*/
-
+/************************* HOME PAGE SECTION E *************************/
 .middle-e-container {
     display: grid;
     grid-template-columns: 30% 70%;
@@ -184,7 +184,6 @@ section.middle-c {
 }
 
 .section-container .right-text ul li {
-    /*    list-style: none;*/
     padding: 3px;
 }
 
@@ -209,20 +208,6 @@ section.middle-c {
     font-size: 20px;
     text-transform: uppercase;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /************************* FOOTER *************************/
 section.footer {
@@ -268,19 +253,7 @@ section.footer a {
     text-decoration: none;
 }
 
-.fa-facebook-square {
-    color: #fff;
-}
-
-.fa-twitter-square {
-    color: #fff;
-}
-
-.fa-instagram {
-    color: #fff;
-}
-
-.fa-linkedin {
+.icon {
     color: #fff;
 }
 
@@ -310,7 +283,6 @@ section.footer .bottom-footer h3{
 .video-header i {
     color: #048BA8;
 }
-
 
 #sidebar ul li {
     color: #FFF;
@@ -503,7 +475,6 @@ section.contact-top p {
 
 .wrapper >* {
     padding: 1.3rem;
-
 }
 
 .wrapper {
@@ -713,7 +684,7 @@ section.contact-top p {
 
 
 
-/************************* MODAL ACCOUONT FORMS FOR VIDEOS *************************/
+/************************* MODAL ACCOUNT FORMS FOR VIDEOS *************************/
 #unavailable-message h5 {
     margin: 0 auto;
     font-size: 20px;
